--- a/index.html
+++ b/index.html
@@ -31,32 +31,45 @@
 
 				<!-- Main -->
 					<div id="main">
+						<!--
 						<article class="thumb">
 							<a href="images/fulls/construction.png" class="image"><img src="images/thumbs/construction.png" alt="" /></a>
 							<h2>Under construction</h2>
 							<p>Page under construction. Scripts are coming soon.</p>
+						</article> 
+						-->
+						<article class="thumb">
+							<a href="images/fulls/pink_noise_nanopore.png" class="image"><img src="images/thumbs/pink_noise_nanopore.png" alt="" /></a>
+							<h2>Article (Nano Letters)<br>The origin of pink noise in nanopore </h2>
+							<p>Our results highlight that the low-frequency pink noise commonly measured in nanopore takes its origin in the reversible adsorption of ions at the pore surface combined with the long-lasting excursions of the ions in the reservoirs. Read the article on the <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" target="_blank">Nano Letters website</a>, or find the <a href="pdfs/AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">PDF file here</a> as well as the <a href="pdfs/SI-AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">SI</a> </p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/aquaporin.png" class="image"><img src="images/thumbs/aquaporin.png" alt="" /></a>
+							<h2>Article (PNAS)<br>The permeability of aquaporin</h2>
+							<p>Our results show that a nanopore with conical entrances and suitable opening angle provides increased hydrodynamic permeability. Strikingly, the optimal opening angles compare well with the angles measured in a large variety of aquaporins, suggesting that their hourglass shape could be the result of a natural selection process toward optimal permeability. Read the article on the <a href="https://www.pnas.org/content/110/41/16367" target="_blank">PNAS website</a>.
+</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/graphene.png" class="image"><img src="images/thumbs/graphene.png" alt="" /></a>
-							<h2>Graphene</h2>
-							<p>Graphene has many incredible physical properties. Unfortunately its production at a large scale remains challenging. Part of my work aims at improving our understanding of the behavior of graphene in fluids, which is crucial because most fabrication processes of graphene-based material rely on the use of fluids. <br> <br>
-Image: two layers of carbon atoms in vacuum (LAMMPS for the simulation, VMD for the visualization).</p>
+							<h2>Research interest<br>Exfoliation of graphene by a liquid</h2>
+							<p>Graphene has many incredible physical properties. Unfortunately its production at a large scale remains challenging. Part of my work aims at improving our understanding of the behaviour of graphene in fluids, which is crucial because most fabrication processes of graphene-based material rely on the use of fluids. <br> <br>
+Image: two layers of carbon atoms (LAMMPS for the simulation, VMD for the visualisation).</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/cellulose.png" class="image"><img src="images/thumbs/cellulose.png" alt="" /></a>
-							<h2>Cellulose</h2>
+							<h2>Research interest<br>The interaction between water and Cellulose</h2>
 							<p>Image: a microfiber of cellulose (LAMMPS for the simulation, VMD for the visualization)</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/silica.png" class="image"><img src="images/thumbs/silica.png" alt="" /></a>
-							<h2>Disordered nanoporous material</h2>
+							<h2>Research interest<br>Disordered nanoporous material</h2>
 							<p>Membrane filtration based on nanoporous material are promising solutions for fluid filtration and depollution (including the capture of CO2). I am focusing on the interactions between fluids and nanoporous media, with the long-term objective of improving separation processes. <br> <br>
 Image: amorphous silica (LAMMPS for the simulation, VMD for the visualization)
 </p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/watercellulose.png" class="image"><img src="images/thumbs/watercellulose.png" alt="" /></a>
-							<h2>Water molecules interacting with cellulose</h2>
+							<h2>Research interest<br>The interaction between water and Cellulose</h2>
 							<p>Image: TIP4P/2005 water molecules and cellulose (LAMMPS for the simulation, VMD for the visualization)</p>
 						</article>
 						<article class="thumb">
