--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Simon Gravelle webpage</title>
@@ -6,161 +11,234 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36911186-4"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'UA-36911186-4');
-		</script> 
 	</head>
 	<body class="is-preload">
+
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#one">My research</a></li>
+							<li><a href="#resume">Resume</a></li>
+							<!--<li><a href="#two">Short resume</a></li>-->
+							<li><a href="#three">Get in touch</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html"><strong>Simon Gravelle</strong> webpage</a></h1>
-						<nav>
-							<ul>
-								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1>Simon Gravelle</h1>
+							<p>Postdoctoral research assistant at the <a href="https://www.sems.qmul.ac.uk/staff/s.gravelle" target="_blank">Queen Mary University of London</a><br>
+							with a PhD from the <a href="https://www.univ-lyon1.fr/" target="_blank">University Lyon 1</a>.</p>
+
+
+							<!--
+							<ul class="actions">
+								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
-						</nav>
-					</header>
+							-->
+						</div>
+					</section>
 
-				<!-- Main -->
-					<div id="main">
-						<!--
-						<article class="thumb">
-							<a href="images/fulls/construction.png" class="image"><img src="images/thumbs/construction.png" alt="" /></a>
-							<h2>Under construction</h2>
-							<p>Page under construction. Scripts are coming soon.</p>
-						</article> 
-						-->
-						<article class="thumb">
-							<a href="images/fulls/pink_noise_nanopore.png" class="image"><img src="images/thumbs/pink_noise_nanopore.png" alt="" /></a>
-							<h2>Article (Nano Letters)<br>The origin of pink noise in nanopore </h2>
-							<p>Our results highlight that the low-frequency pink noise commonly measured in nanopore takes its origin in the reversible adsorption of ions at the pore surface combined with the long-lasting excursions of the ions in the reservoirs. Read the article on the <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" target="_blank">Nano Letters website</a>, or find the <a href="pdfs/AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">PDF file here</a> as well as the <a href="pdfs/SI-AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">SI</a> </p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/aquaporin.png" class="image"><img src="images/thumbs/aquaporin.png" alt="" /></a>
-							<h2>Article (PNAS)<br>The permeability of aquaporin</h2>
-							<p>Our results show that a nanopore with conical entrances and suitable opening angle provides increased hydrodynamic permeability. Strikingly, the optimal opening angles compare well with the angles measured in a large variety of aquaporins, suggesting that their hourglass shape could be the result of a natural selection process toward optimal permeability. Read the article on the <a href="https://www.pnas.org/content/110/41/16367" target="_blank">PNAS website</a>.
-</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/graphene.png" class="image"><img src="images/thumbs/graphene.png" alt="" /></a>
-							<h2>Research interest<br>Exfoliation of graphene by a liquid</h2>
-							<p>Graphene has many incredible physical properties. Unfortunately its production at a large scale remains challenging. Part of my work aims at improving our understanding of the behaviour of graphene in fluids, which is crucial because most fabrication processes of graphene-based material rely on the use of fluids. <br> <br>
-Image: two layers of carbon atoms (LAMMPS for the simulation, VMD for the visualisation).</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/cellulose.png" class="image"><img src="images/thumbs/cellulose.png" alt="" /></a>
-							<h2>Research interest<br>The interaction between water and Cellulose</h2>
-							<p>Image: a microfiber of cellulose (LAMMPS for the simulation, VMD for the visualization)</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/silica.png" class="image"><img src="images/thumbs/silica.png" alt="" /></a>
-							<h2>Research interest<br>Disordered nanoporous material</h2>
-							<p>Membrane filtration based on nanoporous material are promising solutions for fluid filtration and depollution (including the capture of CO2). I am focusing on the interactions between fluids and nanoporous media, with the long-term objective of improving separation processes. <br> <br>
-Image: amorphous silica (LAMMPS for the simulation, VMD for the visualization)
-</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/watercellulose.png" class="image"><img src="images/thumbs/watercellulose.png" alt="" /></a>
-							<h2>Research interest<br>The interaction between water and Cellulose</h2>
-							<p>Image: TIP4P/2005 water molecules and cellulose (LAMMPS for the simulation, VMD for the visualization)</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/waternanotube.jpg" class="image"><img src="images/thumbs/waternanotube.jpg" alt="" /></a>
-							<h2>Water in a carbon nanotube</h2>
-							<p>Carbon nanotubes (CNTs) possesses amazing mass transport properties.<br> <br>
-Image: TIP4P/2005 water molecules in a CNT (LAMMPS for the simulation, VMD for the visualization)</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/water.png" class="image"><img src="images/thumbs/water.png" alt="" /></a>
-							<h2>Water</h2>
-							<p>Water is central to my research. I am interested in the transport properties of water through porous media, the thermodynamics of water, and the interaction of water with other compound. <br> <br>
-Image: TIP4P/2005 water molecules (LAMMPS for the simulation, VMD for the visualization)</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/waterethanol.png" class="image"><img src="images/thumbs/waterethanol.png" alt="" /></a>
-							<h2>Binary mixture</h2>
-							<p>Binary mixtures, such as water and ethanol, are costly to separate. I am trying to discover new separation methods using nanoporous membranes. <br> <br>
-Image: 50/50 water ethanol molecules (LAMMPS for the simulation, VMD for the visualization)</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/Simon.png" class="image"><img src="images/thumbs/Simon.png" alt="" /></a>
-							<h2>About me</h2>
-							<p>I am currently a research assistant at Queen Mary University in London. You can download my resume here.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/tillandsia.png" class="image"><img src="images/thumbs/tillandsia.png" alt="" /></a>
-							<h2>Rootless desert plant</h2>
-							<p>Despite being rootless, Tillandsia plants thrive in dry places such as the Atacama desert. During my post-doctorate in Chile, I studied the physical mechanisms at the origin of the peculiar survival abilities of this plant. <br> <br> 
-Image: tillandsia aeranthos on my balcony in Viña del Mar.</p>
-</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/GitHub.png" class="image"><img src="images/thumbs/GitHub.png" alt="" /></a>
-							<h2>Scripts</h2>
-							<p>All the scripts used for the generation of the images on this website are available in my <a href="https://github.com/simongravelle/simongravelle.github.io" target="_blank">GitHub folder.</a></p>
-						</article>
-					</div>
+				<!-- One -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" class="image" target="_blank"><img src="images/pink_noise_nanopore.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>The origin of pink noise in nanopore</h2>
+									<p>We showed that the low-frequency pink noise commonly measured in nanopore takes its origin in the reversible adsorption of ions at the pore surface combined with the excursions of the ions in the reservoirs. <br> <br>
 
-				<!-- Footer -->
-					<footer id="footer" class="panel">
-						<div class="inner split">
-							<div>
-								<section>
-									<h2>Welcome to my personal page</h2>
-									<p>Fell free to contact me, I am always pleased to exchange about science. 
-									<br> <br>
-									All the scripts corresponding to the images are available online. Feel free to use all the images, there is no copyright.</p>
-								</section>
-								<section>
-									<h2>Follow me on ...</h2>
-									<ul class="icons">
-										<li><a href="https://twitter.com/GravelleSimon" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-										<li><a href="https://www.instagram.com/simongravelleqmul/" class="icon fa-instagram" target="_blank"><span class="label" target="_blank">Instagram</span></a></li>
-										<li><a href="https://github.com/simongravelle/simongravelle.github.io" class="icon fa-github" target="_blank"><span class="label" target="_blank">GitHub</span></a></li>
-									</ul>
-								</section>
-								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
-								</p>
+Find more on <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" target="_blank">Nano Letters</a>, or download the <a href="pdfs/AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">PDF</a> and <a href="pdfs/SI-AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">SI</a>.</p>
+								</div>
 							</div>
-							<div>
+						</section>
+						<section>
+							<a href="https://www.pnas.org/content/110/41/16367" class="image" target="_blank"><img src="images/permeability_aquaporin.png" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>The permeability of aquaporin</h2>
+									<p>Our results show that a nanopore with conical entrances and suitable opening angle provides increased hydrodynamic permeability. Strikingly, the optimal opening angles compare well with the angles measured in a large variety of aquaporins.<br> <br>
+
+
+Find more on <a href="https://www.pnas.org/content/110/41/16367" target="_blank" target="_blank">PNAS</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.4897253" target="_blank">J. Chem. Phys</a>.</p>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.111.244501" class="image"><img src="images/diode_nanofluidics.png" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Osmotic nanofluidic diode</h2>
+									<p>Our results show the possibility to create an osmotic diode exhibiting asymmetric water flow under reversal of osmotic driving. We show that a surface charge asymmetry built on a nanochannel surface leads to nonlinear couplings between water flow and the ion dynamics, which are capable of water flow rectification. <br> <br>
+
+
+Find more on <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.111.244501" target="_blank">PRL</a>.</p>
+
+								</div>
+							</div>
+						</section>
+
+						<section>
+							<a href="#" class="image" target="_blank"><img src="images/tillandsia_asymmetric_transport.png" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Biomimetism of desert rootless plant</h2>
+									<p>We show that the ability of desert plant Tillandsia to absorb liquid water while preventing its evaporation results from clever juxtaposition of a thick hygroscopic wall and a semipermeable membrane.</p><br> <br>
+
+
+Coming soon.</p>
+
+								</div>
+							</div>
+						</section>
+						<!--<section>
+							<a href="#" class="image" target="_blank"><img src="images/pic05.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Fluid-fluid separation</h2>
+									<p>Our results show that carbon-based nanoporous membranes, which are in general permeable to both pure water and ethanol liquids, exhibit a counter-intuitive “self-semi-permeability” to water in the presence of water-ethanol mixtures.</p><br><br>
+
+
+Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" target="_blank">J. Chem. Phys</a>.</p>
+
+								</div>
+							</div>
+						</section>-->
+					</section>
+
+					<section id="resume" class="wrapper style2 fade-up">
+						<div class="inner">
+							<h1>Resume</h1>
+						
+
+							<!--
+							<ul class="actions">
+								<li><a href="#one" class="button scrolly">Learn more</a></li>
+							</ul>
+							-->
+						</div>
+					</section>
+
+				<!-- Two 
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>Short resume</h2>
+							<p>Sentence?</p>
+							<div class="features">
 								<section>
-									<h2>Contact me</h2>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Numerical skills</h3>
+									<p>
+									Molecular dynamics <br> 
+									Finite Element calculations <br> 
+									Grand Canonical Monte Carlo <br> 
+									Umbrella sampling <br> 
+									C++, Python, Matlab/Octave <br> 
+									</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-microscope"></span>
+									<h3>Experimental skills</h3>
+									<p>
+									Fluorescence Correlation Spectroscopy <br> 
+									Mass flow characterisation <br> 
+									Microscopy <br> 
+									</p>
+								</section>
+								<section>
+									<span class="icon solid major fas  fa-dewpoint"></span>
+									<h3>Research interest</h3>
+									<p>
+									Nanofluidics <br> 
+									Thermodynamics <br> 
+									Biomimetism <br> 
+									</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-cog"></span>
+									<h3>Research interest</h3>
+									<p>
+									Transport through nanopore <br> 
+									Mass flow characterisation <br> 
+									Microscopy <br> 
+									</p>
+								</section>
+			
+							</div>
+						</div>
+					</section>
+				-->
+				<!-- Three -->
+					<section id="three" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Get in touch</h2>
+							<!--<p>You can contact me directly from here.</p>-->
+							<div class="split style1">
+								<!--<section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
+												<label for="name">Name</label>
+												<input type="text" name="name" id="name" />
 											</div>
 											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
+												<label for="email">Email</label>
+												<input type="text" name="email" id="email" />
 											</div>
 											<div class="field">
-												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
+												<label for="message">Message</label>
+												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
+											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
+								</section>-->
+								
+								<section>
+									<ul class="contact">
+										<li>
+											<h3>Email</h3>
+											<p>s.gravelle at qmul.ac.uk</p>
+										</li>
+										<li>
+											<h3>Social</h3>
+											<ul class="icons">
+												<li><a href="https://twitter.com/GravelleSimon" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+												<li><a href="https://github.com/simongravelle" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+											</ul>
+										</li>
+									</ul>
 								</section>
 							</div>
 						</div>
-					</footer>
+					</section>
 
 			</div>
 
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
