--- a/index.html
+++ b/index.html
@@ -118,8 +118,28 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 					<section id="resume" class="wrapper style2 fade-up">
 						<div class="inner">
 							<h1>Resume</h1>
-						
-
+							<h2>Research activities</h2>
+							<p>
+								<ul>
+									<li><b>Viscous flow in a nanopore</b><br> entrance effects, geometrical optimisation, biomimetism, continuum limit, solid/liquid friction, capillary effect</li>
+									<li><b>Electrocinetic in a charged nanopore</b><br> nanofluidic diode, coupled transport, noise analysis, surface charge fluctuations </li>
+									<li><b>Thermodynamics of desert plants</b><br> evaporation/condensation, fog capture, biomimetic membrane</li>
+									<li><b>Cell division</b><br> cytoskeleton dynamics, collective effect, self organisation</li>
+									<li><b>Membrane transport</b><br> hygroscopic material, biomimetic, osmosis, flow measurement</li>
+								</ul> 
+							</p>
+							<h2>Skills</h2>
+							<p>
+								<ul>
+									<li><b>Molecular dynamics (LAMMPS)</b></li>
+									<li><b>Grand Canonical Monte-Carlo</b></li>
+									<li><b>Finite element calculations (Comsol)</b></li>
+									<li><b>Analytical model</b></li>
+									<li><b>Programming (Python, C++, Matlab/Octave)</b></li>	
+									<li><b>Fluorescence Correlation Spectroscopy</b></li>
+									<li><b>Mass flow characterisation</b></li>
+								</ul> 
+							</p>
 							<!--
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
