--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36911186-4"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-36911186-4');
+		</script> 
+		
+		
 	</head>
 	<body class="is-preload">
 
