--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 								<section>
 									<ul class="contact">
 										<li>
+											<p>I am always willing to discuss science and simulations, so please do not hesitate to contact me if you have any question about my work.</p>
+										</li>
+										<li>
 											<h3>Email</h3>
 											<p>s.gravelle at qmul.ac.uk</p>
 										</li>
