--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 											<ul class="icons">
 												<li><a href="https://twitter.com/GravelleSimon" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 												<li><a href="https://github.com/simongravelle" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+												<li><a href="https://scholar.google.com/citations?user=9fD2JlYAAAAJ&hl=fr class="icon brands fa-google" target="_blank"><span class="label">Google Scholar</span></a></li>
 											</ul>
 										</li>
 									</ul>
