--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 									<li><b>Mass flow characterisation</b></li>
 								</ul> 
 							</p>
+							<h2>Professional and academic career</h2>
+							<p>
+								<ul>
+									<li><b>2019-today</b> Post doctorate, Queen Mary University of London, United Kingdom</li>
+									<li><b>2016-2019</b> Post doctorate, Universidad Adolfo Ibáñez, Viña del Mar, Chile</li>
+								</ul> 
+							</p>
+		
+		
+		
 							<!--
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -158,55 +168,6 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 						</div>
 					</section>
 
-				<!-- Two 
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>Short resume</h2>
-							<p>Sentence?</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Numerical skills</h3>
-									<p>
-									Molecular dynamics <br> 
-									Finite Element calculations <br> 
-									Grand Canonical Monte Carlo <br> 
-									Umbrella sampling <br> 
-									C++, Python, Matlab/Octave <br> 
-									</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-microscope"></span>
-									<h3>Experimental skills</h3>
-									<p>
-									Fluorescence Correlation Spectroscopy <br> 
-									Mass flow characterisation <br> 
-									Microscopy <br> 
-									</p>
-								</section>
-								<section>
-									<span class="icon solid major fas  fa-dewpoint"></span>
-									<h3>Research interest</h3>
-									<p>
-									Nanofluidics <br> 
-									Thermodynamics <br> 
-									Biomimetism <br> 
-									</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Research interest</h3>
-									<p>
-									Transport through nanopore <br> 
-									Mass flow characterisation <br> 
-									Microscopy <br> 
-									</p>
-								</section>
-			
-							</div>
-						</div>
-					</section>
-				-->
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
