--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 								<ul>
 									<li><b>2019-today</b> Post doctorate, Queen Mary University of London, United Kingdom</li>
 									<li><b>2016-2019</b> Post doctorate, Universidad Adolfo Ibáñez, Viña del Mar, Chile</li>
+									<li><b>2012-2015</b> Doctorate, Université Claude Bernard, Lyon, France</li>
+									<li><b>2010-2012</b> Master of physic, ENS Lyon, Lyon, France</li>
+									<li><b>2012-2015</b> Licence of physic, Université de France-Comté, Besançon, France</li>
 								</ul> 
 							</p>
 		
