--- a/index.html
+++ b/index.html
@@ -153,9 +153,15 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 							<h2>Professional and academic career</h2>
 							<p>
 								<ul>
-									<li><b>2019-today : </b> Postdoc, Queen Mary University of London, United Kingdom</li>
-									<li><b>2016-2019 : </b> Postdoc, Universidad Adolfo Ibáñez, Viña del Mar, Chile</li>
-									<li><b>2012-2015 : </b> Doctorate, Université Claude Bernard, Lyon, France</li>
+									<li><b>2019-today : </b> Postdoc, Queen Mary University of London, United Kingdom<br>
+										with Lorenzo Botto.
+									</li>
+									<li><b>2016-2019 : </b> Postdoc, Universidad Adolfo Ibáñez, Viña del Mar, Chile<br>
+										with Jacques Dumais.
+									</li>
+									<li><b>2012-2015 : </b> Doctorate, Université Claude Bernard, Lyon, France<br>
+										with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
+									</li>
 									<li><b>2010-2012 : </b> Master of physic, ENS Lyon, Lyon, France</li>
 									<li><b>2007-2010 : </b> Licence of physic, Université de France-Comté, Besançon, France</li>
 								</ul> 
