--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 							<p>
 								<ul>
 									<li><b>2019-today : </b> Postdoc, Queen Mary University of London, United Kingdom<br>
-										with Lorenzo Botto.
+									<b style="word-space:2em">&nbsp;&nbsp;</b>	with Lorenzo Botto.
 									</li>
 									<li><b>2016-2019 : </b> Postdoc, Universidad Adolfo Ibáñez, Viña del Mar, Chile<br>
-										with Jacques Dumais.
+									<b style="word-space:2em">&nbsp;&nbsp;</b>	with Jacques Dumais.
 									</li>
 									<li><b>2012-2015 : </b> Doctorate, Université Claude Bernard, Lyon, France<br>
-										with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
+									<b style="word-space:2em">&nbsp;&nbsp;</b>	with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
 									</li>
 									<li><b>2010-2012 : </b> Master of physic, ENS Lyon, Lyon, France</li>
 									<li><b>2007-2010 : </b> Licence of physic, Université de France-Comté, Besançon, France</li>
