--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 									<b style="word-space:2em">&nbsp;&nbsp;</b>	with Jacques Dumais.
 									</li>
 									<li><b>2012-2015 : </b> Doctorate, Université Claude Bernard, Lyon, France<br>
-									<b style="word-space:2em">&nbsp;&nbsp;</b>	with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
+									&nbsp;&nbsp;&nbsp;&nbsp;	with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
 									</li>
 									<li><b>2010-2012 : </b> Master of physic, ENS Lyon, Lyon, France</li>
 									<li><b>2007-2010 : </b> Licence of physic, Université de France-Comté, Besançon, France</li>
