--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 							<h2>Professional and academic career</h2>
 							<p>
 								<ul>
-									<li><b>2019-today : </b> Postdoc, Queen Mary University of London, United Kingdom<br>
+									<li><b>2019-today : Postdoc, Queen Mary University of London, United Kingdom </b><br>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Lorenzo Botto.
 									</li>
-									<li><b>2016-2019 : </b> Postdoc, Universidad Adolfo Ibáñez, Viña del Mar, Chile<br>
+									<li><b>2016-2019 : Postdoc, Universidad Adolfo Ibáñez, Viña del Mar, Chile </b><br>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Jacques Dumais.
 									</li>
-									<li><b>2012-2015 : </b> Doctorate, Université Claude Bernard, Lyon, France<br>
+									<li><b>2012-2015 : Doctorate, Université Claude Bernard, Lyon, France </b><br>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
 									</li>
 									<li><b>2010-2012 : </b> Master of physic, ENS Lyon, Lyon, France</li>
