--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 									<li><b>2012-2015 : Doctorate, Université Claude Bernard, Lyon, France </b><br>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
 									</li>
-									<li><b>2010-2012 : </b> Master of physic, ENS Lyon, Lyon, France</li>
-									<li><b>2007-2010 : </b> Licence of physic, Université de France-Comté, Besançon, France</li>
+									<li><b>2010-2012 :  Master of physic, ENS Lyon, Lyon, France</b></li>
+									<li><b>2007-2010 :Licence of physic, Université de France-Comté, Besançon, France </b> </li>
 								</ul> 
 							</p>
 		
