--- a/index.html
+++ b/index.html
@@ -161,9 +161,11 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 									</li>
 									<li><b>2012-2015 : Doctorate, Université Claude Bernard, Lyon, France </b><br>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	title: Nanofluidics : a theoretical and numerical investigation of fluid transport in nanochannels
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	titre: Nanofluidique : une investigation théorique et numérique du transport fluidique dans les nanocannaux
 									</li>
-									<li><b>2010-2012 :  Master of physic, ENS Lyon, Lyon, France</b></li>
-									<li><b>2007-2010 :Licence of physic, Université de France-Comté, Besançon, France </b> </li>
+									<li><b>2010-2012 : Master of physic, ENS Lyon, Lyon, France</b></li>
+									<li><b>2007-2010 : Licence of physic, Université de France-Comté, Besançon, France </b> </li>
 								</ul> 
 							</p>
 		
