--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Jacques Dumais.
 									</li>
 									<li><b>2012-2015 : Doctorate, Université Claude Bernard, Lyon, France </b><br>
-									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Lydéric Bocquet, Christophe Ybert and Laurent Joly.
-									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	title: Nanofluidics : a theoretical and numerical investigation of fluid transport in nanochannels
-									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	titre: Nanofluidique : une investigation théorique et numérique du transport fluidique dans les nanocannaux
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Lydéric Bocquet, Christophe Ybert and Laurent Joly.<br>
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	title: Nanofluidics : a theoretical and numerical investigation of fluid transport in nanochannels<br>
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	titre: Nanofluidique : une investigation théorique et numérique du transport fluidique dans les nanocannaux<br>
 									</li>
 									<li><b>2010-2012 : Master of physic, ENS Lyon, Lyon, France</b></li>
 									<li><b>2007-2010 : Licence of physic, Université de France-Comté, Besançon, France </b> </li>
