--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 							<h2>Skills</h2>
 							<p>
 								<ul>
-									<li><b>Molecular dynamics (LAMMPS)</b></li>
+									<li><b>Molecular dynamics</b> (LAMMPS)</li>
 									<li><b>Grand Canonical Monte-Carlo</b></li>
-									<li><b>Finite element calculations (Comsol)</b></li>
+									<li><b>Finite element calculations</b> (Comsol)</li>
 									<li><b>Analytical model</b></li>
-									<li><b>Programming (Python, C++, Matlab/Octave)</b></li>	
-									<li><b>Fluorescence Correlation Spectroscopy</b></li>
+									<li><b>Programming</b> (Python, C++, Matlab/Octave)</li>	
+									<li><b>Fluorescence correlation spectroscopy</b></li>
 									<li><b>Mass flow characterisation</b></li>
 								</ul> 
 							</p>
