--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" targ
 								<section>
 									<ul class="contact">
 										<li>
-											<p>I am always willing to discuss science and simulations, so please do not hesitate to contact me if you have any question about my work.</p>
+											<p>I am always willing to discuss science and simulations, please do not hesitate to contact me if you have any questions about my work.</p>
 										</li>
 										<li>
 											<h3>Email</h3>
