--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<h2>The origin of pink noise in nanopore</h2>
 									<p>We showed that the low-frequency pink noise commonly measured in nanopore takes its origin in the reversible adsorption of ions at the pore surface combined with the excursions of the ions in the reservoirs. <br> <br>
 
-Find more on <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" target="_blank">Nano Letters</a>, or download the <a href="pdfs/AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">PDF</a> and <a href="pdfs/SI-AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">SI</a>.</p>
+Find more on <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" target="_blank">Nano Letters</a>. <!--, or download the <a href="pdfs/AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">PDF</a> and <a href="pdfs/SI-AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">SI</a>.--></p>
 								</div>
 							</div>
 						</section>
