--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<p>We show that the ability of desert plant Tillandsia to absorb liquid water while preventing its evaporation results from clever juxtaposition of a thick hygroscopic wall and a semipermeable membrane.</p><br> <br>
 
 
-Coming soon in Nature Communication.</p>
+Coming soon in Nature Communications.</p>
 
 								</div>
 							</div>
