--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<p>We show that the ability of desert plant Tillandsia to absorb liquid water while preventing its evaporation results from clever juxtaposition of a thick hygroscopic wall and a semipermeable membrane.</p><br> <br>
 
 
-Coming soon in Nature Communications.</p>
+Coming soon in Nature Communications and J. Chem. Phys.</p>
 
 								</div>
 							</div>
@@ -85,7 +85,7 @@ Coming soon in Nature Communications.</p>
 									<h2>The origin of pink noise in nanopore</h2>
 									<p>We showed that the low-frequency pink noise commonly measured in nanopore takes its origin in the reversible adsorption of ions at the pore surface combined with the excursions of the ions in the reservoirs. <br> <br>
 
-Find more on <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" target="_blank">Nano Letters</a>. <!--, or download the <a href="pdfs/AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">PDF</a> and <a href="pdfs/SI-AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">SI</a>.--></p>
+Find more in <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" target="_blank">Nano Letters</a>. <!--, or download the <a href="pdfs/AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">PDF</a> and <a href="pdfs/SI-AdsorptionKineticsinOpenNanoporesasaSourceofLow-FrequencyNoise.pdf" target="_blank">SI</a>.--></p>
 								</div>
 							</div>
 						</section>
@@ -97,7 +97,7 @@ Find more on <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" tar
 									<p>Our results show that a nanopore with conical entrances and suitable opening angle provides increased hydrodynamic permeability. Strikingly, the optimal opening angles compare well with the angles measured in a large variety of aquaporins.<br> <br>
 
 
-Find more on <a href="https://www.pnas.org/content/110/41/16367" target="_blank" target="_blank">PNAS</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.4897253" target="_blank">J. Chem. Phys</a>.</p>
+Find more in <a href="https://www.pnas.org/content/110/41/16367" target="_blank" target="_blank">PNAS</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.4897253" target="_blank">J. Chem. Phys</a>.</p>
 								</div>
 							</div>
 						</section>
@@ -109,7 +109,7 @@ Find more on <a href="https://www.pnas.org/content/110/41/16367" target="_blank"
 									<p>Our results show the possibility to create an osmotic diode exhibiting asymmetric water flow under reversal of osmotic driving. We show that a surface charge asymmetry built on a nanochannel surface leads to nonlinear couplings between water flow and the ion dynamics, which are capable of water flow rectification. <br> <br>
 
 
-Find more on <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.111.244501" target="_blank">PRL</a>.</p>
+Find more in <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.111.244501" target="_blank">PRL</a>.</p>
 
 								</div>
 							</div>
@@ -123,7 +123,7 @@ Find more on <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.
 									<p>Our results show that carbon-based nanoporous membranes, which are in general permeable to both pure water and ethanol liquids, exhibit a counter-intuitive “self-semi-permeability” to water in the presence of water-ethanol mixtures.</p><br><br>
 
 
-Find more on <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" target="_blank">J. Chem. Phys</a>.</p>
+Find more in <a href="https://aip.scitation.org/doi/full/10.1063/1.4963098" target="_blank">J. Chem. Phys</a>.</p>
 
 								</div>
 							</div>
