--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="inner">
 							<h1>Simon Gravelle</h1>
 							<p>Postdoctoral research assistant at the <a href="https://www.sems.qmul.ac.uk/staff/s.gravelle" target="_blank">Queen Mary University of London</a><br>
-							with a PhD from the <a href="https://www.univ-lyon1.fr/" target="_blank">University Lyon 1</a>.</p>
+							with a <a href="PhD from the https://hal.archives-ouvertes.fr/tel-02375009/document" target="_blank">University Lyon 1</a>.</p>
 
 
 							<!--
