--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@ Tillandsia</b><br>
 							<h2>Professional and academic career</h2>
 							<p>
 								<ul>
-									<li><b>2019-today : Postdoc, Queen Mary University of London, London, United Kingdom </b><br>
+									<li><b>2019-today :  Postdoctoral Research Assistant, Queen Mary University of London, London, United Kingdom </b><br>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Lorenzo Botto
 									</li>
-									<li><b>2016-2019 : Postdoc, Universidad Adolfo Ibáñez, Viña del Mar, Chile </b><br>
+									<li><b>2016-2019 :  Postdoctoral Research Assistant, Universidad Adolfo Ibáñez, Viña del Mar, Chile </b><br>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Jacques Dumais
 									</li>
 									<li><b>2012-2015 : Doctor of Philosophy (PhD), Université Claude Bernard, Lyon, France </b><br>
