--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ gtag('config', 'UA-36911186-4');
 <nav>
 <ul>
 <li><a href="#intro">Welcome</a></li>
-<li><a href="#research">My research</a></li>
-<li><a href="#publi">Publication list</a></li>
+<li><a href="#research">Research</a></li>
+<li><a href="#publi">Publications</a></li>
 <li><a href="#resume">Resume</a></li>
-<li><a href="#contact">Get in touch</a></li>
+<li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
 </div>
@@ -293,7 +293,7 @@ Python, C++, Matlab/Octave</li>
 <!-- Contact page -->
 <section id="contact" class="wrapper style1 fade-up">
 <div class="inner">
-<h2>Get in touch</h2>
+<h2>Contact</h2>
 <div class="split style1">
 <section>
 <ul class="contact">
@@ -309,7 +309,11 @@ Python, C++, Matlab/Octave</li>
 <ul class="icons">
 <li><a href="https://twitter.com/GravelleSimon" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 <li><a href="https://github.com/simongravelle" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-<li><a href="https://scholar.google.com/citations?user=9fD2JlYAAAAJ&hl=fr class="icon brands fa-google" target="_blank"><span class="label">Google Scholar</span></a></li>
+<li><a href="https://scholar.google.com/citations?user=9fD2JlYAAAAJ&hl=fr" class="fa fa-graduation-cap" ria-hidden="true" target="_blank"><span class="label">Google Scholar</span></a></li>
+<li><a href="https://www.researchgate.net/profile/Simon_Gravelle" class="fab fa-researchgate" target="_blank"><span class="label">Research gate</span></a></li>
+
+
+
 </ul>
 </li>
 </ul>
