--- a/index.html
+++ b/index.html
@@ -311,9 +311,7 @@ Python, C++, Matlab/Octave</li>
 <li><a href="https://github.com/simongravelle" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 <li><a href="https://scholar.google.com/citations?user=9fD2JlYAAAAJ&hl=fr" class="fa fa-graduation-cap" ria-hidden="true" target="_blank"><span class="label">Google Scholar</span></a></li>
 <li><a href="https://www.researchgate.net/profile/Simon_Gravelle" class="fab fa-researchgate" target="_blank"><span class="label">Research gate</span></a></li>
-
-
-
+<li><a href="https://orcid.org/0000-0003-2149-6706" class="fab fa-orcid" target="_blank"><span class="label">Orcid</span></a></li>
 </ul>
 </li>
 </ul>
