--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
 <li>
 <b>Flow-Induced Shift of the Donnan Equilibrium for Ultra-Sensitive Mass Transport Measurement Through a Single Nanochannel</b><br>
 Simon Gravelle, Christophe Ybert<br>
-<a href="https://arxiv.org/abs/1910.13126" target="_blank">Accepted for publication in the Journal of Chemical Physics, arXiv:1910.13126</a>
+<a href="https://arxiv.org/abs/1910.13126" target="_blank">Just accepted, The Journal of Chemical Physics, 151 (24), 2019, arXiv:1910.13126</a>
 </li>
 </ul> 
 </p>
@@ -120,7 +120,7 @@ Simon Gravelle, Christophe Ybert<br>
 <li>
 <b>A multi-scale model for fluid transport through a bio-inspired passive valve</b><br>
 Simon Gravelle, Jacques Dumais<br>
-The Journal of Chemical Physics, 151 (24), 2019
+Just accepted, The Journal of Chemical Physics, 151 (24), 2019
 </li>
 </ul> 
 </p>
