--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Simon Gravelle, Roland R. Netz, Lydéric Bocquet<br>
 <li>
 <b>Carbon membranes for efficient water-ethanol separation</b><br>
 Simon Gravelle, Hiroaki Yoshida, Laurent Joly, Christophe Ybert, Lydéric Bocquet<br>
-<a href="https://aip.scitation.org/doi/abs/10.1063/1.4963098?journalCode=jcp" target="_blank">The Journal of Chemical Physics, 145 (12), 2016</>
+<a href="https://aip.scitation.org/doi/abs/10.1063/1.4963098?journalCode=jcp" target="_blank">The Journal of Chemical Physics, 145 (12), 2016</a>
 </li>
 </ul> 
 </p>
