--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ gtag('config', 'UA-36911186-4');
 <nav>
 <ul>
 <li><a href="#intro">Welcome</a></li>
-<li><a href="#research">Research</a></li>
+<li><a href="#research">Highlights</a></li>
 <li><a href="#publi">Publications</a></li>
 <li><a href="#resume">Resume</a></li>
 <li><a href="#contact">Contact</a></li>
@@ -39,7 +39,7 @@ gtag('config', 'UA-36911186-4');
 <p>Postdoctoral research assistant at the <a href="https://www.sems.qmul.ac.uk/staff/s.gravelle" target="_blank">Queen Mary University of London</a><br>
 with a <a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="_blank">PhD from the University Lyon 1</a>.</p>
 <ul class="actions">
-<li><a href="#research" class="button scrolly">My research</a></li>
+<li><a href="#research" class="button scrolly">Research highlights</a></li>
 </ul>
 </div>
 </section>
