--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Just accepted, The Journal of Chemical Physics, 151 (24), 2019
 <li>
 <b>Design of a Unidirectional Water Valve in
 Tillandsia</b><br>
-Pascal, Raux, Simon Gravelle, Jacques Dumais<br>
+Pascal Raux, Simon Gravelle, Jacques Dumais<br>
 Accepted for publication in Nature Communication.
 </li>
 </ul> 
