--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ Python, C++, Matlab/Octave</li>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	<a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="_blank"><i>Nanofluidics : a theoretical and numerical investigation of fluid transport in nanochannels</i><br></a>
 </li>
 <li><b>2010-2012 : Master of Science (MSc), with a major in physics, ENS Lyon, Lyon, France</b></li>
-<li><b>2007-2010 : Bachelor of Science (BSc) with a major in physics, Université de France-Comté, Besançon, France </b> </li>
+<li><b>2007-2010 : Bachelor of Science (BSc) with a major in physics, Université de Franche-Comté, Besançon, France </b> </li>
 </ul> 
 </p>
 </div>
