--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
 <li>
 <b>Flow-Induced Shift of the Donnan Equilibrium for Ultra-Sensitive Mass Transport Measurement Through a Single Nanochannel</b><br>
 Simon Gravelle, Christophe Ybert<br>
-<a href="https://aip.scitation.org/doi/full/10.1063/1.5133888" target="_blank">The Journal of Chemical Physics, 151 (24), 2019, arXiv:1910.13126</a>
+<a href="https://aip.scitation.org/doi/full/10.1063/1.5133888" target="_blank">The Journal of Chemical Physics, 151 (24), 2019</a>
 </li>
 </ul> 
 </p>
