--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ with a <a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="
 <div class="inner">
 <h2>Biomimetism of desert rootless plant</h2>
 <p>We show that the ability of desert plant Tillandsia to absorb liquid water while preventing its evaporation results from clever juxtaposition of a thick hygroscopic wall and a semipermeable membrane.</p><br> <br>
-Coming soon in Nature Communications and J. Chem. Phys.</p>
+Coming soon in Nature Communications. See also this article in <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p>
 </div>
 </div>
 </section>
@@ -109,18 +109,18 @@ Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
 <p>
 <ul>
 <li>
-<b>Flow-Induced Shift of the Donnan Equilibrium for Ultra-Sensitive Mass Transport Measurement Through a Single Nanochannel</b><br>
-Simon Gravelle, Christophe Ybert<br>
-<a href="https://aip.scitation.org/doi/full/10.1063/1.5133888" target="_blank">The Journal of Chemical Physics, 151 (24), 2019</a>
+<b>A multi-scale model for fluid transport through a bio-inspired passive valve</b><br>
+Simon Gravelle, Jacques Dumais<br>
+<a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">The Journal of Chemical Physics, 152 (1), 2020</p>  
 </li>
 </ul> 
 </p>
 <p>
 <ul>
 <li>
-<b>A multi-scale model for fluid transport through a bio-inspired passive valve</b><br>
-Simon Gravelle, Jacques Dumais<br>
-Just accepted, The Journal of Chemical Physics, 151 (24), 2019
+<b>Flow-Induced Shift of the Donnan Equilibrium for Ultra-Sensitive Mass Transport Measurement Through a Single Nanochannel</b><br>
+Simon Gravelle, Christophe Ybert<br>
+<a href="https://aip.scitation.org/doi/full/10.1063/1.5133888" target="_blank">The Journal of Chemical Physics, 151 (24), 2019</a>
 </li>
 </ul> 
 </p>
