--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Accepted for publication in Nature Communication.
 <li>
 <b>A multi-scale model for fluid transport through a bio-inspired passive valve</b><br>
 Simon Gravelle, Jacques Dumais<br>
-<a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">The Journal of Chemical Physics, 152 (1), 2020</p>  
+<a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">The Journal of Chemical Physics, 152 (1), 2020</a>  
 </li>
 </ul> 
 </p>
