--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ with a <a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="
 <div class="inner">
 <h2>Biomimetism of desert rootless plant</h2>
 <p>We show that the ability of desert plant Tillandsia to absorb liquid water while preventing its evaporation results from clever juxtaposition of a thick hygroscopic wall and a semipermeable membrane.</p><br> <br>
-Coming soon in Nature Communications. See also this article in <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p>
+Coming soon in Nature Communications. See also this article in <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p></a>
 </div>
 </div>
 </section>
@@ -79,7 +79,7 @@ Find more in <a href="https://www.pnas.org/content/110/41/16367" target="_blank"
 </div>
 </div>
 </section>
-<!-- Nanofluidic diode-->
+<!-- Nanofluidic diode
 <section>
 <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.111.244501" class="image"><img src="images/diode_nanofluidics.png" alt="" data-position="25% 25%" /></a>
 <div class="content">
@@ -90,7 +90,7 @@ Find more in <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.
 </div>
 </div>
 </section>
-
+-->
 </section>
 
 <!-- Publication page-->
