--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ Find more in <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" tar
 <a href="https://www.pnas.org/content/110/41/16367" class="image" target="_blank"><img src="images/permeability_aquaporin.png" alt="" data-position="top center" /></a>
 <div class="content">
 <div class="inner">
-<h2>The permeability of aquaporin</h2>
-<p>Our results show that a nanopore with conical entrances and suitable opening angle provides increased hydrodynamic permeability. Strikingly, the optimal opening angles compare well with the angles measured in a large variety of aquaporins.<br> <br>
+<h2>The permeability of aquaporins</h2>
+<p>Our results show that a nanopore with conical entrances and suitable opening angle provides increased hydrodynamic permeability. Strikingly, optimal opening angles compare well with the angles measured in a large variety of aquaporins.<br> <br>
 Find more in <a href="https://www.pnas.org/content/110/41/16367" target="_blank" target="_blank">PNAS</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.4897253" target="_blank">J. Chem. Phys</a>.</p>
 </div>
 </div>
