--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ with a <a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="
 <div class="inner">
 <h2>Biomimetism of desert rootless plant</h2>
 <p>We show that the ability of desert plant Tillandsia to absorb liquid water while preventing its evaporation results from clever juxtaposition of a thick hygroscopic wall and a semipermeable membrane.</p><br> <br>
-Coming soon in Nature Communications. See also this article in <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p></a>
+Find more in <a href="10.1038/s41467-019-14236-5" target="_blank">Nature Communications</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p></a>
 </div>
 </div>
 </section>
