--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ with a <a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="
 <div class="content">
 <div class="inner">
 <h2>Biomimetics of a desert rootless plant</h2>
-<p>We show that the ability of the desert plant <i>Tillandsia</i> to absorb liquid water while also preventing its evaporation during drought results from a passive mechanisme, relying on a clever juxtaposition of material within its epidermis.</p><br> <br>
+<p>We show that the ability of the desert plant <i>Tillandsia</i> to absorb liquid water while also preventing its evaporation during drought results from a passive mechanism relying on a clever juxtaposition of material within its epidermis.</p><br> <br>
 Find more in <a href="10.1038/s41467-019-14236-5" target="_blank">Nature Communications</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p></a>
 </div>
 </div>
