--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ with a <a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="
 <div class="content">
 <div class="inner">
 <h2>Biomimetics of a desert rootless plant</h2>
-<p>We show that the ability of the desert plant <i>Tillandsia</i> to absorb liquid water while also preventing its evaporation during drought results from a passive mechanism relying on a clever juxtaposition of material within its epidermis.</p><br> <br>
+<p>We showed that the ability of the desert plant <i>Tillandsia</i> to absorb liquid water while also preventing its evaporation during drought results from a passive mechanism relying on a clever juxtaposition of material within its epidermis.</p><br> <br>
 Find more in <a href="10.1038/s41467-019-14236-5" target="_blank">Nature Communications</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p></a>
 </div>
 </div>
@@ -74,7 +74,7 @@ Find more in <a href="https://pubs.acs.org/doi/10.1021/acs.nanolett.9b02858" tar
 <div class="content">
 <div class="inner">
 <h2>The permeability of aquaporins</h2>
-<p>Our results show that a nanopore with conical entrances and suitable opening angle provides increased hydrodynamic permeability. Strikingly, optimal opening angles compare well with the angles measured in a large variety of aquaporins.<br> <br>
+<p>Our results show that a nanopore with conical entrances and suitable opening angles provides increased hydrodynamic permeability. Strikingly, optimal opening angles as predicted by our model compare well with the angles measured in a large variety of aquaporins.<br> <br>
 Find more in <a href="https://www.pnas.org/content/110/41/16367" target="_blank" target="_blank">PNAS</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.4897253" target="_blank">J. Chem. Phys</a>.</p>
 </div>
 </div>
