--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@ with a <a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="
 <section id="research" class="wrapper style2 spotlights">
 <!-- Tillandia-->
 <section>
-<a href="10.1038/s41467-019-14236-5" class="image" target="_blank"><img src="images/tillandsia_asymmetric_transport.png" alt="" data-position="25% 25%" /></a>
+<a href="https://www.nature.com/articles/s41467-019-14236-5" class="image" target="_blank"><img src="images/tillandsia_asymmetric_transport.png" alt="" data-position="25% 25%" /></a>
 <div class="content">
 <div class="inner">
 <h2>Biomimetics of a desert rootless plant</h2>
 <p>We showed that the ability of the desert plant <i>Tillandsia</i> to absorb liquid water while also preventing its evaporation during drought results from a passive mechanism relying on a clever juxtaposition of material within its epidermis.</p><br> <br>
-Find more in <a href="10.1038/s41467-019-14236-5" target="_blank">Nature Communications</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p></a>
+Find more in <a href="https://www.nature.com/articles/s41467-019-14236-5" target="_blank">Nature Communications</a> and <a href="https://aip.scitation.org/doi/full/10.1063/1.5126481" target="_blank">J. Chem. Phys.</p></a>
 </div>
 </div>
 </section>
