--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@ Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
 <p>
 <ul>
 <li>
-<b>Design of a Unidirectional Water Valve in
-Tillandsia</b><br>
+<b>Design of a Unidirectional Water Valve in <i>Tillandsia</i></b><br>
 Pascal Raux, Simon Gravelle, Jacques Dumais<br>
-Accepted for publication in Nature Communication.
+<a href="https://www.nature.com/articles/s41467-019-14236-5" target="_blank">Nature Communications, 11 (396), 2020</a>  
 </li>
 </ul> 
 </p>
