--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Simon Gravelle, Jacques Dumais<br>
 <p>
 <ul>
 <li>
-<b>Flow-Induced Shift of the Donnan Equilibrium for Ultra-Sensitive Mass Transport Measurement Through a Single Nanochannel</b><br>
+<b>Flow-induced shift of the donnan equilibrium for ultra-sensitive mass transport measurement through a single nanochannel</b><br>
 Simon Gravelle, Christophe Ybert<br>
 <a href="https://aip.scitation.org/doi/full/10.1063/1.5133888" target="_blank">The Journal of Chemical Physics, 151 (24), 2019</a>
 </li>
