--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
 <p>
 <ul>
 <li>
-<b>Design of a Unidirectional Water Valve in <i>Tillandsia</i></b><br>
+<b>Design of a unidirectional water valve in <i>Tillandsia</i></b><br>
 Pascal Raux, Simon Gravelle, Jacques Dumais<br>
 <a href="https://www.nature.com/articles/s41467-019-14236-5" target="_blank">Nature Communications, 11 (1), 2020</a>  
 </li>
