--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@ Find more in <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.
 <p>
 <ul>
 <li>
+<b>Graphene nanoplatelets attain a stable orientation in a shear flow</b><br>
+Catherine Kamal, Simon Gravelle, Lorenzo Botto<br>
+Submitted
+</li>
+</ul> 
+</p>  
+<p>
+<ul>
+<li>
 <b>Liquid exfoliation of multilayer graphene in sheared solvents: a molecular dynamics investigation</b><br>
 Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
 <a href="https://hal.archives-ouvertes.fr/hal-02397007" target="_blank">Submitted, hal-02397007</a>
