--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Submitted
 <li>
 <b>Liquid exfoliation of multilayer graphene in sheared solvents: a molecular dynamics investigation</b><br>
 Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
-<a href="https://hal.archives-ouvertes.fr/hal-02397007" target="_blank">Submitted, hal-02397007</a>
+<a href="https://hal.archives-ouvertes.fr/hal-02397007" target="_blank">Accepted for publication in The Journal of Chemical Physics, see the preprint: hal-02397007</a>
 </li>
 </ul> 
 </p>
