--- a/index.html
+++ b/index.html
@@ -100,9 +100,18 @@ Find more in <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.
 <p>
 <ul>
 <li>
-<b>Graphene nanoplatelets attain a stable orientation in a shear flow</b><br>
+<b>Effect of hydrodynamic slip on the rotational dynamics of a thin Brownian platelet in shear flow</b><br>
 Catherine Kamal, Simon Gravelle, Lorenzo Botto<br>
 Submitted
+</li>
+</ul> 
+</p>  
+<p>
+<ul>
+<li>
+<b>Hydrodynamic slip suppresses the rotation of nanoplatelets in a shear flow</b><br>
+Catherine Kamal, Simon Gravelle, Lorenzo Botto<br>
+Accepted in principle in Nature Communications.
 </li>
 </ul> 
 </p>  
