--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ Accepted in principle in Nature Communications.
 <p>
 <ul>
 <li>
-<b>Liquid exfoliation of multilayer graphene in sheared solvents: a molecular dynamics investigation</b><br>
+<b>Liquid exfoliation of multilayer graphene in sheared solvents: A molecular dynamics investigation</b><br>
 Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
-<a href="https://hal.archives-ouvertes.fr/hal-02397007" target="_blank">Accepted for publication in The Journal of Chemical Physics, see the preprint: hal-02397007</a>
+<a href="https://aip.scitation.org/doi/full/10.1063/1.5141515" target="_blank">The Journal of Chemical Physics, 152 (10), 2020</a>  
 </li>
 </ul> 
 </p>
