--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@ Accepted in principle in Nature Communications.
 <b>Liquid exfoliation of multilayer graphene in sheared solvents: A molecular dynamics investigation</b><br>
 Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
 <a href="https://aip.scitation.org/doi/full/10.1063/1.5141515" target="_blank">The Journal of Chemical Physics, 152 (10), 2020</a>  
+<br>
+see also the new <a href="https://www.nanowerk.com/nanotechnology-news2/newsid=54739.php" target="_blank"><i>Researchers develop first model to guide large-scale production of ultrathin graphene</i></a>.
 </li>
 </ul> 
 </p>
