--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Accepted in principle in Nature Communications.
 Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
 <a href="https://aip.scitation.org/doi/full/10.1063/1.5141515" target="_blank">The Journal of Chemical Physics, 152 (10), 2020</a>  
 <br>
-see also this <a href="https://www.nanowerk.com/nanotechnology-news2/newsid=54739.php" target="_blank"><i>nanowerk news article</a>.
+see also this <a href="https://www.nanowerk.com/nanotechnology-news2/newsid=54739.php" target="_blank">nanowerk news article</a>.
 </li>
 </ul> 
 </p>
