--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Submitted
 <li>
 <b>Hydrodynamic slip suppresses the rotation of nanoplatelets in a shear flow</b><br>
 Catherine Kamal, Simon Gravelle, Lorenzo Botto<br>
-Accepted in principle in Nature Communications.
+Accepted for publication in Nature Communications.
 </li>
 </ul> 
 </p>  
