--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@ with a <a href="https://hal.archives-ouvertes.fr/tel-02375009/document" target="
 
 <!-- Research page-->
 <section id="research" class="wrapper style2 spotlights">
+<!-- Colloid-->
+<section>
+<a href="https://www.nature.com/articles/s41467-019-14236-5" class="image" target="_blank"><img src="images/Graphene_shear_flow.png" alt="" data-position="25% 25%" /></a>
+<div class="content">
+<div class="inner">
+<h2>The odd behavior of suspended graphene</h2>
+<p>Current theories predict that a plate-like particle rotates continuously
+in a shear flow. We instead show that even nanometric
+hydrodynamic slip may induce a thin plate-like particle to adopt a
+stable orientation, and discuss implications of this effect for flow
+processing of 2D nanomaterials.</p><br> <br>
+Find more in <a href="https://www.nature.com/articles/s41467-020-15939-w" target="_blank">Nature Communications</a>.
+</div>
+</div>
+</section>
 <!-- Tillandia-->
 <section>
 <a href="https://www.nature.com/articles/s41467-019-14236-5" class="image" target="_blank"><img src="images/tillandsia_asymmetric_transport.png" alt="" data-position="25% 25%" /></a>
