--- a/index.html
+++ b/index.html
@@ -124,6 +124,13 @@ Submitted
 <p>
 <ul>
 <li>
+<b>Hydrodynamic slip can align thin nanoplatelets in shear flow</b><br>
+Catherine Kamal, Simon Gravelle, Lorenzo Botto<br>
+<a href="https://www.nature.com/articles/s41467-020-15939-w" target="_blank">Nature Communications, 11 (2425), 2020</a>  
+</li>  
+  
+  
+<li>
 <b>Hydrodynamic slip suppresses the rotation of nanoplatelets in a shear flow</b><br>
 Catherine Kamal, Simon Gravelle, Lorenzo Botto<br>
 Accepted for publication in Nature Communications.
