--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@ Alessandro Gadaleta, Catherine Sempere, Simon Gravelle, Alessandro Siria, Rémy 
 <b>Nanofluidic osmotic diodes: Theory and molecular dynamics simulations</b><br>
 Clara Picallo, Simon Gravelle, Laurent Joly, Elisabeth Charlaix, Lydéric Bocquet<br>
 <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.111.244501" target="_blank">Physical Review Letters, 111 (24), 2013</a>
+<br>
+see also this <a href="https://physics.aps.org/articles/v6/s156" target="_blank">APS synopsis</a>.
 </li>
 </ul> 
 </p>
