--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@ Find more in <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.
 <section id="publi" class="wrapper style2 fade-up">
 <div class="inner">
 <h1>List of publications</h1>
+ <p>
+<ul>
+<li>
+<b>Dynamics of Nanographene in Shear Flow</b><br>
+Simon Gravelle, Catherine Kamal, Lorenzo Botto<br>
+Submitted
+</li>
+</ul> 
+</p>  
 <p>
 <ul>
 <li>
