--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Find more in <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.
 <section id="publi" class="wrapper style2 fade-up">
 <div class="inner">
 <h1>List of publications</h1>
- <p>
+<p>
 <ul>
 <li>
 <b>Dynamics of Nanographene in Shear Flow</b><br>
@@ -290,31 +290,43 @@ Simon Gravelle, Laurent Joly, François Detcheverry, Christophe Ybert, Cécile C
 <h2>Research interests</h2>
 <p>
 <ul>		
-<li><b>Porous medium</b><br>
-Hygroscopic biomaterial, Inorganic membrane</li>
-<li><b>Colloid</b><br>
-Suspension in shear flow, Liquid phase exfoliation, Rheology, Hydrodynamic slip effects</li>
-<li><b>Biomimetics</b><br>
-Water capture, Thermoregulation </li>
-<li><b>Mass transport</b><br>
-Entrance effects, Continuum limit, Osmosis, Capillary effects</li>
-<li><b>Electrohydrodynamics</b><br>
-Surface charge fluctuations, Pink noise, Nanofluidic diode</li>
-<li><b>Plant cell division</b><br>
-Cytoskeleton dynamics, Self organisation, Collective effect</li>
+<li>
+<b>Adsorption and transport in nanoporous structure</b>
+<br>
+Heterogeneous and multiscale porous media, hybrid organic inorganic material, biomaterial.
+</li>
+<li>
+<b>Bidimentional colloids (e.g. graphene, flat molecule)</b>
+<br>
+Adsorption at liquid-liquid interface, rheology, liquid phase exfoliation.
+</li>
+<li>
+<b>Nanofluidics</b>
+<br>
+Continuum limit, entrance effects, osmosis, capillary effects.
+</li>
+<li>
+<b>Electrohydrodynamics</b>
+<br>
+Surface charge fluctuations, pink noise, nanofluidic diode.
+</li>
+<li><b>Plant cell division</b>
+<br>
+Cytoskeleton dynamics, self organisation, collective effect
+</li>
 </ul>
 </p>
 <h2>Skills</h2>
 <p>
 <ul>
 <li><b>Molecular simulations</b><br>
-Equilibrium and out-of-equilibrium molecular dynamics, Grand Canonical Monte-Carlo, Umbrella sampling</li>
-<li><b>Continuum simulations</b><br>
-Finite element calculations, Numerical resolution of equation</li>
+Molecular dynamics (equilibrium and out-of-equilibrium), Monte-Carlo (in grand canonical and osmotic ensembles), free energy methods (Umbrella sampling, steered molecular dynamics).</li>
+<li><b>Continuum approaches</b><br>
+Finite element calculations, bottom-up method, numerical resolution of equation.</li>
 <li><b>Experiments</b><br>
-Fluorescence correlation spectroscopy, Mass flow characterisation</li>
-<li><b>Other</b><br>
-Python, C++, Matlab/Octave</li>
+Fluorescence correlation spectroscopy, mass flow characterisation.</li>
+<li><b>Others</b><br>
+Matlab/Octave, Python, C++, kdenlive (video editing).</li>
 </ul> 
 </p>
 <h2>Professional and academic career</h2>
