--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ Matlab/Octave, Python, C++, kdenlive (video editing).</li>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Lorenzo Botto
 </li>
 <li><b>2016-2019 :  Postdoctoral Research Assistant, Universidad Adolfo Ibáñez, Viña del Mar, Chile </b><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>FONDECYT postdoctoral fellowship</b>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>FONDECYT postdoctoral fellowship</b><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	with Jacques Dumais
 </li>
 <li><b>2012-2015 : Doctor of Philosophy (PhD), Université Claude Bernard, Lyon, France </b><br>
