--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 										<p>I am using molecular and continuum simulations to study adsorption and transport of fluid in nanoporous materials. I am also interested in biomimetics and 2D materials at liquid interfaces.</p>
 									</div>
 									<span class="image object">
-										<video autoplay loop muted playsinline>
+										<video autoplay loop muted playsinline poster="/images/animationalternative.jpg">
 										  <source src="images/animation.webm" type="video/webm">
 										  <source src="images/animation.mp4" type="video/mp4">
 										</video>
